--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://Shippiddge.com/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Shippiddge dot com'
+theme = "github-style"
