--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ pluralizeListTitles = false
 
 
 [params]
-  description = "Starter Squad, Smashtasm, Sonic Logic, and more~ Accumulating nostalgia since 2006."
+  description = "Starter Squad, Smashtasm, and more. Generating nostalgia since 2006."
   email = "contact@shippiddge.com"
   favicon = "/images/shipp112.png"
   avatar = "/images/shipp_logo_400.png"
